# goldcarver-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  loderunner.py  pyproject.toml
goldcarver_tui/: __init__.py  levels.py  screens.py  tui.tcss
loderunner_tui/: app.py  engine.py  levels.py  tiles.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
