[project]
name = "loderunner-tui"
version = "0.1.0"
description = "Terminal-native Lode Runner clone with 150+ classic levels"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["loderunner_tui"]

[tool.setuptools.package-data]
loderunner_tui = ["tui.tcss"]
